# m2-vs-intel-pytorch-model-training

./: README.md  pyproject.toml
model_training_test/: train.py  train2.py  train3.py  train4.py
